fixed clock issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,11 @@
   font-family: 'Playpen Sans', cursive;
 }
 
+input[type="time"]::-webkit-calendar-picker-indicator {
+  padding: 0;
+  margin: 0;
+}
+
 .salaryForm select {
   border: 2px solid black;
   border-radius: 5px;
